<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_bottom_left_2_leftup"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/SmallSnowFore"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize"
                        android:clickable="false"
                        android:focusable="false"
                        android:enabled="false"/>

                    <Button
                        android:id="@+id/btn_bottom_left_2_rightup"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/SmallSnowBack"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize"
                        android:clickable="false"
                        android:focusable="false"
                        android:enabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_bottom_left_2_leftdown"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/BigSnowFore"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize"
                        android:clickable="false"
                        android:focusable="false"
                        android:enabled="false"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_bottom_center_2_leftup"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/SmallRainFore"
                        android:textColor="#ffffff"
                        tools:ignore="NestedWeights,VisualLintButtonSize"
                        android:clickable="false"
                        android:focusable="false"
                        android:enabled="false"/>

                    <Button
                        android:id="@+id/btn_bottom_center_2_rightup"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/SmallRainBack"
                        android:textColor="#ffffff"
                        tools:ignore="VisualLintButtonSize"
                        android:clickable="false"
                        android:focusable="false"
                        android:enabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_bottom_center_2_leftdown"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/BigRainFore"
                        android:textColor="#ffffff"
                        tools:ignore="NestedWeights,VisualLintButtonSize"
                        android:clickable="false"
                        android:focusable="false"
                        android:enabled="false"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_bottom_center_3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/Cloud"
                    android:textColor="#ffffff"
                    tools:ignore="VisualLintButtonSize"
                    android:clickable="false"
                    android:focusable="false"
                    android:enabled="false"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
